--- a/.jshintrc
+++ b/.jshintrc
@@ -1,8 +1,4 @@
 {
-  /* ----------------- */
-  "devel": true,
-  "debug": true,
-  /* ----------------- */
   "camelcase": true,
   "curly": true,
   "eqeqeq": true,
@@ -11,15 +7,19 @@
   "latedef": "nofunc",
   "newcap": true,
   "noarg": true,
+  "noempty": true,
+  "nonbsp": true,
   "quotmark": "single",
   "undef": true,
   "unused": true,
   "strict": true,
   "trailing": true,
+
   "node": true,
   "browser": true,
   "jquery": true,
-  "validthis": true,
-  "globals": {"_":true, "moment":true}
-}
+  "devel": true,
+  "debug": true,
 
+  "globals": {}
+}
